src/objects/Relacion_Campos_Hijo__mdt.object
<CustomObject>
    <description>Metadato empleado para la asignación de campos de las subqueries en la recepción de movimientos</description>
    <fields>
        <fullName>Campos_Hijo__c</fullName>
        <label>Campos_Hijo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Iteraciones__c</fullName>
        <label>Iteraciones</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LKP_Padre__c</fullName>
        <label>Relacion_Campos</label>
        <referenceTo>Relacion_Campos__mdt</referenceTo>
        <relationshipLabel>Relaciones_Campos_Hijos</relationshipLabel>
        <relationshipName>Relaciones_Campos_Hijos</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Longitudes_Hijo__c</fullName>
        <label>Longitudes_Hijo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Posiciones__c</fullName>
        <label>Posiciones</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Relacion_Campos_Hijo</label>
    <pluralLabel>Relaciones_Campos_Hijos</pluralLabel>
</CustomObject>